# RefactoredClone

./: .clang-format  CMakeLists.txt
include/: Blocks.hpp  Chunk.hpp  Collision.hpp  Common.hpp  Engine.hpp  FastNoiseLite.h  Menu.hpp  Player.hpp  Renderer.hpp  Settings.hpp  raygui.h
include/Block/: Blocks.hpp
src/: Chunk.cpp  Engine.cpp  LightingSystem.cpp  LightingSystem.hpp  Menu.cpp  MeshThreadPool.cpp  MeshThreadPool.hpp  Player.cpp  Renderer.cpp  Settings.cpp  main.cpp
src/Engine/: Engine.cpp  Engine.hpp  Settings.cpp  Settings.hpp
src/Engine/Collision/: Collision.hpp
src/Engine/Lighitng/: LightingSystem.cpp  LightingSystem.hpp
src/Engine/MultiThreading/: MeshThreadPool.cpp  MeshThreadPool.hpp
src/Engine/Player/: Player.cpp  Player.hpp
src/Engine/Rendering/: Renderer.cpp  Renderer.hpp
src/Menu/: Menu.cpp  Menu.hpp
src/World/: World.cpp  World.hpp
src/World/Biome/: Biome.cpp  Biome.hpp
src/World/Chunk/: Chunk.cpp  Chunk.hpp
src/World/Region/: Region.cpp  Region.hpp
